Table users {
  id int [pk]
  name varchar [not null]
  email varchar [unique, not null]
  password varchar [not null]
  phone varchar [not null]
  role varchar [not null] // 'OWNER', 'STAFF', 'CUSTOMER', 'SYSTEM_ADMIN'
  created_at timestamp
  updated_at timestamp
}

Table shops {
  id int [pk]
  owner_id int [ref: > users.id, not null]
  name varchar [not null]
  location varchar [not null]
  description text
  open_time time [not null]
  close_time time [not null]
  created_at timestamp
  updated_at timestamp
  average_rating decimal [default: 5.0]
}

Table services {
  id int [pk]
  shop_id int [ref: > shops.id]
  name varchar
  description text
  price decimal
  created_at timestamp
  updated_at timestamp
}

Table staffs {
  id int [pk]
  user_id int [ref: > users.id]
  shop_id int [ref: > shops.id]
  created_at timestamp
  updated_at timestamp
}

Table staff_requests {
  id int [pk]
  user_id int [ref: > users.id, not null]
  shop_id int [ref: > shops.id, not null]
  status varchar [not null] // 'PENDING', 'ACCEPTED', 'REJECTED'
  created_at timestamp
  updated_at timestamp
}

Table customers {
  id int [pk]
  user_id int [ref: - users.id, not null]
  created_at timestamp
  updated_at timestamp
}

Table orders {
  id int [pk]
  customer_id int [ref: > users.id]
  shop_id int [ref: > shops.id]
  total_price decimal
  status varchar // 'NEW', 'PENDING', 'CANCELED', 'PROCESSING', 'COMPLETED', 'DELIVERED', 'PAID', 'PAID_FAILED'
  special_instructions text
  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id int [pk]
  order_id int [ref: > orders.id]
  service_id int [ref: > services.id]
  quantity int
  price decimal
}

Table payments {
  id int [pk]
  order_id int [ref: - orders.id]
  amount decimal
  payment_method varchar
  paid_at timestamp
}

Table reviews {
  id int [pk]
  order_id int [ref: - orders.id]
  customer_id int [ref: > users.id]
  rating int // 1-10 stars
  comment text
  created_at timestamp
}